Changelog
=========

0.4.1 (unreleased)
------------------

- Nothing changed yet.


0.4.0 (2010-07-29)
------------------

- tested with Python 2.7.

- UDP port is now an option.

- configuration through ~/.vimpdbrc instead of environment variables.


0.3.8 (2010-06-17)
------------------

- fix: some versions of VIM need explicit import of vim module
  even though most don't.
  (http://github.com/gotcha/vimpdb/issues/issue/5)


0.3.7 (2010-05-20)
------------------

- fix: could not go "down" after switching from pdb to
  vimpdb after having gone "up".
  (http://github.com/gotcha/vimpdb/issues/issue/4)

0.3.6 (2010-04-17)
------------------

- fix: "continue" command was broken after breakpoint has been set.
  (http://github.com/gotcha/vimpdb/issues/issue/3)

- fix: Key mappings were left broken after "continue" command.
  (http://github.com/gotcha/vimpdb/issues/issue/2)

0.3.5 (2010-03-22)
------------------

- better documentation, especially for Windows

- fix: capture of output was broken for Python 2.5 and 2.6

- Windows compatibility (at least XP)


0.3.4 (2010-03-15)
------------------

- close socket to allow debugging session to start again


0.3.3 (2010-03-04)
------------------

- avoid leaving mappings in debugged buffers


0.3.2 (2010-03-03)
------------------

- more documentation


0.3.1 (2010-03-02)
------------------

- fix setup.py metadata so that it does not hold non ascii chars.
  This avoided actual release to PyPI


0.3 (2010-03-02)
----------------

- fully rewritten


0.2.1 (2008-06-27)
------------------

- added ``vimpdb`` script

- added "exit" callback

0.2 (2008-06-17)
----------------

- first release to PyPi
