@@ -14,12 +14,4 @@ In priority order:
 
 - key bindings in vimpdb buffer.
 
-- try to start Vim server if it is not started.
-
-- try to guess Vim server name to avoid need of
-  ``VIMPDB_SERVERNAME``.
-
-- check and complain if Vim does not support the right options.
-
-
 and much more...
