@@ -4,7 +4,10 @@ Changelog
 0.4.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- check ``python``and ``clientserver`` support; gives a chance to provide right
+  configuration if support is missing
+
+- try to start a VIM instance if none is available
 
 
 0.4.0 (2010-07-29)
